-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.568 2009-07-07 21:47:54 guru Exp $
-----------------------------------------------------------------------------------------

-----------------------------------------------------------------------------------------
2009-07-10
	* GMT 4.5.0 finalized and released
-----------------------------------------------------------------------------------------
2009-07-07	remko
	* gmt_support.c (GMT_RI_prepare):	Fixed bug: when x_inc in km, m, etc,
				value was ignored (always 1).

2009-07-05	pwessel
	* grdimage.c:		For -Q we now make sure the NaN-color is unique.

2009-07-04	jluis
	* gmtsuppl.bat:		Add x2sys_list x2sys_report x2sys_solve & x2sys_merge to the x2sys section

2009-07-02	remko
	* Ellipsoids.txt:	Added TOPEX ellipsoid

2009-07-01	pwessel
	* mgd77/mgd77sniffer.c:	Did not reset the E77 structure between cruises.
	* mgd77/mgd77list.c:	Modifier -At added which attempts to create fake cruise times
				based on header information and distance along track.

2009-06-30	pwessel
	* grdfilter.c:		Toggle -T was not processed correctly if -Rgridfile was given.
	* mgd77list.c:		Output relative time did not use GMT's --TIME_*

2009-06-27	remko
	* gmt_init.c (GMT_history):	No longer remove supposedly empty .gmtcommands4 file.
				Could have been written to by piped GMT command. Now create/write
				only when new matter is to be written.

2009-06-25	pwessel
	* gmt_grdio.c:		Change for reasonable x/y range if units has the words "longitude"
				or "latitude" before concluding we have geodetic coordinates.
	* gmt_support.c:	The modifier :<radius>[unit] to the -G option in grdcontour for
				the placement of contour labels is now +r<radius>[unit] since the
				colon interfered with ddd:mm:ss coordinates.

2009-06-24	jluis
	* x2sys/x2sys_merge.c:	New program to merge updated COEs table into a main COE table database